feat: 자동차 이름 입력 및 유효성 검사